# CSCI-4961-Labs

./: bio.md  lab1.md
Lab1/: lab1.md
Lab2/: Lab2.md
Lab3/: Lab3.md
Lab4/: Lab4.md
Lab5/: Lab5.md
Lab5/Makefiles/Cmake/: CMakeLists.txt  Makefile
Lab5/Makefiles/make/: Makefile
Lab5/Step1_Results/: CMakeLists.txt  tutorial.cxx
Lab5/Step2_Results/: CMakeLists.txt  tutorial.cxx
Lab5/Step3_Results/: CMakeLists(MathFunctions).txt  CMakeLists.txt
Lab5/Step4_Results/: CMakeLists.txt
Lab5/Step5_Results/: CMakeLists(MathFunctions).txt  CMakeLists.txt
Lab6/: Lab6.md
Lab7/: lab7.md  word_ladder.py
Lab8/: Lab8.md
Lab9/: Lab9.md  part3.py  test.py
